# masterthesis

./: .gitattributes  .gitignore  README.md
examples/: circle.avi  elephant.avi
install/: CMakeLists_splitstep.txt  CMakeLists_wavefunction.txt  example.cc  installation.txt
matrix/: CMakeLists.txt  colour.h  matrix.cc  matrix.h  stb_image_write.h
settings_manager/: CMakeLists.txt  settings_manager.cc  settings_manager.h
splitstep/: CMakeLists.txt  CMakeLists_splitstep.txt  arithmetics.cc  arithmetics.h  main.cc
splitstep/wavefunction/: CMakeLists.txt  wavefunction.cc  wavefunction.h
